What a weird one. The navbar in mobile was technically going out of the box due to its padding not being part of width calculations (fixed with box-sizing: border-box). Normally this wasn't noticeable unless a user pinch-zoomed out then pinch-zoomed back in, which would leave extra space on the side.  However, something about opening the keyboard on iPhone upon focus of an input with font-size greater than 1em (as on the homepage Primo-style search box) caused the extra space to suddenly show up at right. Fixing the mobile navbar CSS to use better values for its width appearance fixed the keyboard problem.

--- a/libsite7b/css/header.css
+++ b/libsite7b/css/header.css
@@ -120,7 +120,7 @@
     display: none;
   }
   #secondary-nav ul.menu li {
-    width: calc(33% - .5em);
+    width: calc(33.333% - .5em);
     background-color: #0096d6;
     display: inline-block;
     float: left;
@@ -261,6 +261,7 @@
   flex: 1;
   outline: none;
 }
+
 #search-input::-ms-clear {
   height: 20px;
   width: 20px;
